<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="20sp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".presentation.userdetails.UserDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvUserCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12sp"
            android:padding="12sp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12sp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvPortrait"
                    android:layout_width="200sp"
                    android:layout_height="200sp"
                    android:layout_gravity="center"
                    android:layout_margin="12sp"
                    android:elevation="0sp"
                    app:cardCornerRadius="100dp"
                    app:cardElevation="0sp">

                    <ImageView
                        android:id="@+id/ivPortrait"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/contentDescriptionUserProfilePhoto"
                        android:scaleType="centerCrop" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombres_y_apellidos"
                    android:textAlignment="textStart"
                    android:textSize="14sp"
                     />

                <TextView
                    android:id="@+id/tvFullNameDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginVertical="12sp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_tittle"
                    android:textAlignment="textStart"
                    android:textSize="14sp"
                     />

                <TextView
                    android:id="@+id/tvEmailDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:id="@+id/llEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginVertical="12sp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_tittle"
                    android:textAlignment="textStart"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/tvGenderDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginVertical="12sp"
                    android:background="@android:color/darker_gray" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registered_tittle"
                    android:textAlignment="textStart"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/tvRegisteredDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registered"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginVertical="12sp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_tittle"
                    android:textAlignment="textStart"
                    android:textSize="14sp"
                     />

                <TextView
                    android:id="@+id/tvCellPhoneDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginVertical="12sp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_tittle"
                    android:textAlignment="textStart"
                    android:textSize="14sp"
                    />

                <TextView
                    android:id="@+id/tvCityDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city_state_and_country"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAddressDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tvCoordinatesDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coordinates"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>
                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:layout_constraintTop_toBottomOf="@id/tvCoordinatesDetails"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>
